feat: setup information architecture

--- a/pages/404.html
+++ b/pages/404.html
@@ -1,10 +1,11 @@
 ---
 layout: default
+permalink: /404.html
 ---
 
 <style type="text/css" media="screen">
   .container {
-    margin: 10px auto;
+    margin: 30vh auto;
     max-width: 600px;
     text-align: center;
   }
@@ -17,8 +18,6 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1>Page not found</h1>
+  <div>Maybe we'll create a search function for you here soon...</div>
 </div>
